# nwo-robotics-api

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: full_platform_lifecycle.py
scripts/: init_db.sql
src/: __init__.py  cli.py
src/agents/: __init__.py  auth.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  identities.py
src/gateway/: __init__.py  proxy.py
src/graph/: __init__.py  service.py
src/models/: __init__.py  database.py  identity.py  orm.py  schemas.py
src/token_economy/: __init__.py  ledger.py
src/ws/: __init__.py  broadcaster.py
tests/: test_api.py  test_auth.py  test_graph.py  test_tokens.py
